--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div class="content">
-    <div class="tablero">
-        <app-game></app-game>
-    </div>
-    <div class="info">
-        <app-info-chart></app-info-chart>
-    </div>
-</div>
+<app-main></app-main>
