Ultimos cambios antes de unir info-chart y game

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,8 +1,9 @@
 <div class="content">
     <div class="tablero">
-        <app-game></app-game>
+        <app-game (emitter)="setDatos($event)"></app-game>
     </div>
     <div class="info">
         <app-info-chart></app-info-chart>
     </div>
 </div>
+<p>{{jugadasAmarillo}} + {{jugadasRojo}} + {{partidasGanadasAmarillo}} + {{partidasGanadasRojo}}</p>
