cambio de diseño

--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,58 +1,69 @@
-<div class="tablero">
-    <table>
-        <tr>
-            <td class="fila-0 columna-0"></td>
-            <td class="fila-0 columna-1"></td>
-            <td class="fila-0 columna-2"></td>
-            <td class="fila-0 columna-3"></td>
-            <td class="fila-0 columna-4"></td>
-            <td class="fila-0 columna-5"></td>
-            <td class="fila-0 columna-6"></td>
-        </tr>
-        <tr>
-            <td class="fila-1 columna-0"></td>
-            <td class="fila-1 columna-1"></td>
-            <td class="fila-1 columna-2"></td>
-            <td class="fila-1 columna-3"></td>
-            <td class="fila-1 columna-4"></td>
-            <td class="fila-1 columna-5"></td>
-            <td class="fila-1 columna-6"></td>
-        </tr>
-        <tr>
-            <td class="fila-2 columna-0"></td>
-            <td class="fila-2 columna-1"></td>
-            <td class="fila-2 columna-2"></td>
-            <td class="fila-2 columna-3"></td>
-            <td class="fila-2 columna-4"></td>
-            <td class="fila-2 columna-5"></td>
-            <td class="fila-2 columna-6"></td>
-        </tr>
-        <tr>
-            <td class="fila-3 columna-0"></td>
-            <td class="fila-3 columna-1"></td>
-            <td class="fila-3 columna-2"></td>
-            <td class="fila-3 columna-3"></td>
-            <td class="fila-3 columna-4"></td>
-            <td class="fila-3 columna-5"></td>
-            <td class="fila-3 columna-6"></td>
-        </tr>
-        <tr>
-            <td class="fila-4 columna-0"></td>
-            <td class="fila-4 columna-1"></td>
-            <td class="fila-4 columna-2"></td>
-            <td class="fila-4 columna-3"></td>
-            <td class="fila-4 columna-4"></td>
-            <td class="fila-4 columna-5"></td>
-            <td class="fila-4 columna-6"></td>
-        </tr>
-        <tr>
-            <td class="fila-5 columna-0"></td>
-            <td class="fila-5 columna-1"></td>
-            <td class="fila-5 columna-2"></td>
-            <td class="fila-5 columna-3"></td>
-            <td class="fila-5 columna-4"></td>
-            <td class="fila-5 columna-5"></td>
-            <td class="fila-5 columna-6"></td>
-        </tr>
-    </table>
+<div class="caja-principal">
+    <div class="tablero">
+        <table>
+            <tr>
+                <td class="fila-0 columna-0"></td>
+                <td class="fila-0 columna-1"></td>
+                <td class="fila-0 columna-2"></td>
+                <td class="fila-0 columna-3"></td>
+                <td class="fila-0 columna-4"></td>
+                <td class="fila-0 columna-5"></td>
+                <td class="fila-0 columna-6"></td>
+            </tr>
+            <tr>
+                <td class="fila-1 columna-0"></td>
+                <td class="fila-1 columna-1"></td>
+                <td class="fila-1 columna-2"></td>
+                <td class="fila-1 columna-3"></td>
+                <td class="fila-1 columna-4"></td>
+                <td class="fila-1 columna-5"></td>
+                <td class="fila-1 columna-6"></td>
+            </tr>
+            <tr>
+                <td class="fila-2 columna-0"></td>
+                <td class="fila-2 columna-1"></td>
+                <td class="fila-2 columna-2"></td>
+                <td class="fila-2 columna-3"></td>
+                <td class="fila-2 columna-4"></td>
+                <td class="fila-2 columna-5"></td>
+                <td class="fila-2 columna-6"></td>
+            </tr>
+            <tr>
+                <td class="fila-3 columna-0"></td>
+                <td class="fila-3 columna-1"></td>
+                <td class="fila-3 columna-2"></td>
+                <td class="fila-3 columna-3"></td>
+                <td class="fila-3 columna-4"></td>
+                <td class="fila-3 columna-5"></td>
+                <td class="fila-3 columna-6"></td>
+            </tr>
+            <tr>
+                <td class="fila-4 columna-0"></td>
+                <td class="fila-4 columna-1"></td>
+                <td class="fila-4 columna-2"></td>
+                <td class="fila-4 columna-3"></td>
+                <td class="fila-4 columna-4"></td>
+                <td class="fila-4 columna-5"></td>
+                <td class="fila-4 columna-6"></td>
+            </tr>
+            <tr>
+                <td class="fila-5 columna-0"></td>
+                <td class="fila-5 columna-1"></td>
+                <td class="fila-5 columna-2"></td>
+                <td class="fila-5 columna-3"></td>
+                <td class="fila-5 columna-4"></td>
+                <td class="fila-5 columna-5"></td>
+                <td class="fila-5 columna-6"></td>
+            </tr>
+        </table>
+    </div>
+    <div class="info">
+        <h1 [ngClass]="{'amarillo-h1': turno == 'Amarillo', 'rojo-h1': turno == 'Rojo'}">{{turno}}</h1>
+        <h1>Jugadas</h1>
+        <h2>Amarillo: <span [ngClass]="{'amarillo-h2':true}">{{numJugadasAmarillo}}</span></h2>
+        <h2>Rojo: <span [ngClass]="{'rojo-h2':true}">{{numJugadasAmarillo}}</span></h2>
+        <h1>Partidas ganadas</h1>
+        <h2>Amarillo: <span [ngClass]="{'amarillo-h2':true}">{{partidasGanadasAmarillo}}</span></h2>
+        <h2>Rojo: <span [ngClass]="{'rojo-h2':true}">{{partidasGanadasRojo}}</span></h2>
+    </div>
 </div>
