--- a/src/app/components/game/game.component.css
+++ b/src/app/components/game/game.component.css
@@ -1,25 +1,91 @@
 * {
     margin: 0px;
     padding: 0px;
+    font-family: letraApp, Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: #222;
+    letter-spacing: 2px;
 }
-.juego {
+
+.caja-principal {
     display: flex;
+    flex-wrap: nowrap;
 }
+
 .tablero {
     display: flex;
-    margin: 0px 20px;
     justify-content: center;
-    background-color: darkcyan;
-    flex: 3;
-    
+    flex: 4;
 }
+
 table {
-    background-color: darkcyan;
+    background-color: #999;
     border-spacing: 10px;
+    padding: 0px 40px;
+    border-radius: 10px;
 }
+
 td {
     width: 140px;
     height: 140px;
     border-radius: 100%;
-    box-shadow: -5px -5px 10px rgb(50,50,50) inset;
+    box-shadow: -5px -5px 7px rgb(50, 50, 50) inset;
+}
+
+.info {
+    background-color: #999;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    flex: 1;
+    justify-content: center;
+    border-radius: 10px;
+    padding: 0px;
+    margin-right: 20px;
+}
+
+.info h1:not(h1:nth-child(1)) {
+    width: 100%;
+    font-size: 2.3rem;
+    text-align: center;
+    color:black;
+    padding: 50px 0px;
+}
+
+.info h2 {
+    padding: 0px 20px;
+}
+
+.amarillo-h1 {
+    color: #222;
+    font-size: 3rem;
+    font-weight: bold;
+    text-decoration: underline yellow;
+    padding: 50px 0px 200px 0px;
+}
+
+.rojo-h1 {
+    color: #222;
+    font-size: 3rem;
+    font-weight: bold;
+    text-decoration: underline rgba(255, 0, 0, 0.8);
+    padding: 50px 0px 200px 0px;
+
+}
+
+.amarillo-h2 {
+    color: rgb(221, 221, 0);
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.rojo-h2 {
+    color: rgb(220, 0, 0);
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: letraApp;
+    src: url(./../../../assets/Permanent_Marker/PermanentMarker-Regular.ttf);
 }
